fix mobile nav pixel offset, footer gap, make logo into link, and fix social links

--- a/styles/generic-styles.css
+++ b/styles/generic-styles.css
@@ -24,7 +24,7 @@ html {
 
 body {
   position: relative;
-  min-height: 100%;
+  min-height: 100vh;
   color: var(--color-secondary-dark);
   background-color: var(--color-primary-light);
   scrollbar-width: none;
@@ -277,7 +277,7 @@ nav .nav-content {
 .side-menu:checked ~ .nav {
   /* 100% of viewport minus header height */
   /* Chrome specifies using 100% INSTEAD OF 100vh */
-  height: calc(100% - 76px);
+  height: calc(100% - 75px);
 }
 
 /* Give mobile nav links 5/6 of height */
